--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-    "name": "test",
-    "version": "0.1.0",
-    "private": "true",
-    "scripts": {
-        "local": "next dev",
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "test": "NEXT_PUBLIC_SA_URL=https://next.test.com yarn"
-    }
+  "name": "my-webapp",
+  "version": "1.0.0",
+  "description": "Simple Node.js web server (Express) serving a static page",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "NODE_ENV=development nodemon server.js",
+    "test": "NEXT_PUBLIC_SA_URL=https://next.test.com yarn"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
