--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -170,12 +170,12 @@ jobs:
       - name: checkout
         uses: actions/checkout@v5
 
-      - name: Download TAR artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: html-${{ matrix.envs }}
-          path: |
-            ./artifacts
+      # - name: Download TAR artifact
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: html-${{ matrix.envs }}
+      #     path: |
+      #       ./artifacts
 
       - name: Download artifact version
         uses: actions/download-artifact@v4
